pre anaconda push

--- a/templates/backtest.html
+++ b/templates/backtest.html
@@ -136,20 +136,20 @@ $orange = #FAA43A;
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <form style="margin-left:5%">
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
-          <p>Stock Name: <input type="text" name="fname">
-          Weight: <input type="number" name="lname"></p>
+          <p>Stock Name: <input type="text" name="Sname1">
+          Weight: <input type="number" name="Sweight1"></p>
+          <p>Stock Name: <input type="text" name="Sname2">
+          Weight: <input type="number" name="Sweight2"></p>
+          <p>Stock Name: <input type="text" name="Sname3">
+          Weight: <input type="number" name="Sweight3"></p>
+          <p>Stock Name: <input type="text" name="Sname4">
+          Weight: <input type="number" name="Sweight4"></p>
+          <p>Stock Name: <input type="text" name="Sname5">
+          Weight: <input type="number" name="Sweight5"></p>
+          <p>Stock Name: <input type="text" name="Sname6">
+          Weight: <input type="number" name="Sweight6"></p>
+          <p>Stock Name: <input type="text" name="Sname7">
+          Weight: <input type="number" name="Sweight7"></p>
           <p>Time Horizon in Years: <input type="number" name="lname"></p>
           <p><input style="margin-top:5%;margin-left:40%" type="submit" value="Start Back Testing!" class="btn btn-success"><p>
         </form>
