--- a/templates/backtest_paul.html
+++ b/templates/backtest_paul.html
@@ -7,16 +7,19 @@
 			{% csrf_token %}
 		<fieldset class="form-group">
 			<legend class="border-bottom mb-4">
-				Join Today
+				Select a Portfolio For Backtesting
 			</legend>
 			{{ form|crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit"> Sign Up</button>
+			<button class="btn btn-outline-info" type="submit"> Test Portfolio</button>
 			
 		</div>
 		</form>
 
+	</div>
+	<div>
+		{{graph|safe}}
 	</div>
 
 {% endblock content %}
