base html cleanup

--- a/templates/backtest_paul.html
+++ b/templates/backtest_paul.html
@@ -12,13 +12,13 @@
 			{{ form|crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit"> Test Portfolio</button>
+			<button class="btn btn-primary" type="submit"> Test Portfolio</button>
 			
 		</div>
 		</form>
 
 	</div>
-	<div>
+	<div style="margin-left:-30%;padding:0px;">
 		{{graph|safe}}
 	</div>
 
