--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 	<script src="../static/js/modernizr-2.6.2.min.js"></script>
 	
 </head>
-<body>
+<body  style="padding:0px; background-color: rgba(0,0,0,0.05)"> <!-- background-image: url(../static/images/background.jpg);background-size:cover;"> -->
 	<header class="site-header">
 	<!--
 	  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
@@ -92,7 +92,7 @@
 	    </div>
 	  </nav> -->
 
-		<nav class="fh5co-nav" role="navigation">
+		<nav class="fh5co-nav" role="navigation" style="background-color: white">
 	      <div class="top-menu">
 	        <div class="container">
 	          <div class="row">
@@ -123,10 +123,10 @@
 	    </nav>
 
 	</header>
-	<main role="main" class="container">
-		<!-- style="background-color: #F0F8FF"-->
+	<main role="main" class="container" style="margin-top: 1%;background-color: white;border-radius: 10px;">
+		<!-- style="background-color: #F0F8FF" style="width:100%;height:100%;padding:0px;background-image: url(../static/images/background.jpg);background-size:cover;" -->
   		<div class="row">
-		    <div class="col-md-8">
+		    <div style= "width:50%;height:100%;text-align:center;margin-left:auto;margin-right:auto">	<!--class="col-md-8"-->
 		    	{% if messages %}
 		    		{% for message in messages %}
 		    			<div class="alert alert-{{ message.tags }}">
