--- a/templates/logout_paul.html
+++ b/templates/logout_paul.html
@@ -18,7 +18,7 @@
 	<h2> You have been logged out </h2>
 	<div class="border-top pt-3">
 		<small class="text-muted">
-			<a class="ml-2" href="{% url 'login' %}">Log In Again</a>
+			<a class="btn btn-primary" href="{% url 'login' %}">Log In Again</a>
 		</small>
 	</div>
 	<!--</div> -->
