--- a/templates/goalRender_paul.html
+++ b/templates/goalRender_paul.html
@@ -2,28 +2,27 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+	<div style="padding:0px;">
+    	<p><strong>Monthly Portfolio Chacteristics</strong> Return: {{return}} CVar: {{cvar}} Sharpe: {{sharpe}}</p>
+   	</div>
+	<div style="padding:0px;">
+		{{graph|safe}}
+	</div>
 	<div class ="content-section">
 		<form method="POST">
 			{% csrf_token %}
 		<fieldset class="form-group">
 			<legend class="border-bottom mb-4">
-				Join Today
+				Select a Return Goal and Time Horizon
 			</legend>
 			{{ form|crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-outline-info" type="submit"> Sign Up</button>
+			<button class="btn btn-primary" type="submit"> Save Resulting Portfolio</button>
 			
 		</div>
 		</form>
-
 	</div>
-	<div style="padding:0px;">
-    	<p><strong>Input Portfolio</strong> Return: CVar:  Sharpe: </p>
-    	<p><strong>Output Portfolio</strong> Return:  CVar:  Sharpe: </p>
-   	</div>
-	<div>
-		{{graph|safe}}
-	</div>
+	
 
 {% endblock content %}
