--- a/templates/goal_paul.html
+++ b/templates/goal_paul.html
@@ -12,17 +12,17 @@
 			{{ form|crispy }}
 		</fieldset>
 		<div class="form-group">
-			<button class="btn btn-primary" type="submit"> Test Portfolio</button>
+			<button class="btn btn-primary" type="submit"> Generate Portfolio</button>
 			
 		</div>
 		</form>
 
 	</div>
-	<div style="margin-left:-30%;padding:0px;">
+	<div style="padding:0px;">
+    	<p><strong>Monthly Portfolio Chacteristics</strong> Return: {{return}} CVar: {{cvar}} Sharpe: {{sharpe}}</p>
+   	</div>
+	<div style="padding:0px;">
 		{{graph|safe}}
-	</div>
-	<div class="form-group">
-			<button class="btn btn-primary" type="submit"> Save Result</button>	
 	</div>
 
 {% endblock content %}
