--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-7">
-						<div id="fh5co-logo"><a href="index.html" style="font-size:25px">S<span>.</span>O<span>.</span>A<span>.</span>P<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="{% url 'webapp-home' %}" style="font-size:25px">S<span>.</span>O<span>.</span>A<span>.</span>P<span>.</span></a></div>
 					</div>
 					<div class="col-xs-5 text-right menu-1">
 						{% if user.is_authenticated %}
@@ -92,7 +92,7 @@
 			   				<div class="slider-text-inner">
 			   					<h1>Intelligent Investment Management System</h1>
 									<h2>Fintech</h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Explore</a></p>
+									<p><a class="btn btn-primary btn-lg" href="#fh5co-practice">Explore</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
