--- a/templates/recommend_better_paul.html
+++ b/templates/recommend_better_paul.html
@@ -18,7 +18,11 @@
 		</form>
 
 	</div>
-	<div style="margin-left:-30%;padding:0px;">
+	<div style="padding:0px;">
+    	<p><strong>Input Portfolio</strong> Return:  CVar:  Sharpe: </p>
+    	<p><strong>Output Portfolio</strong> Return:  CVar:  Sharpe: </p>
+   	</div>
+	<div style="padding:0px;">
 		{{graph|safe}}
 	</div>
 	<div class="form-group">
