got volumes and optimization working properly

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,8 +90,8 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Intelligent Investment Management System</h1>
-									<h2>Fintech</h2>
+			   					<h1>Clean Up Your Investments</h1>
+									<h2>Smart Optimized Analytic Platform</h2>
 									<p><a class="btn btn-primary btn-lg" href="#fh5co-practice">Explore</a></p>
 			   				</div>
 			   			</div>
@@ -118,8 +118,8 @@
 							<i class="icon-home"></i>
 						</span>
 						<div class="desc">
-							<h3>It's Safe</h3>
-							<p></p>
+							<h3>Backtest Your Portfolio</h3>
+							<p>Determine if your portfolio will stand the test of time</p>
 						</div>
 					</div>
 				</div>
@@ -129,8 +129,8 @@
 							<i class="icon-eye"></i>
 						</span>
 						<div class="desc">
-							<h3>It's customized</h3>
-							<p></p>
+							<h3>Recommendation for a Better Portfolio</h3>
+							<p>Think you've made good investments? We'll show you something better.</p>
 						</div>
 					</div>
 				</div>
@@ -140,8 +140,8 @@
 							<i class="icon-shopping-cart"></i>
 						</span>
 						<div class="desc">
-							<h3>It's carefree</h3>
-							<p></p>
+							<h3>Recommendation For Your Goal</h3>
+							<p>Help us Help you</p>
 						</div>
 					</div>
 				</div>
@@ -167,7 +167,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><img src="static/images/danielyin.jpg" class="img-responsive" style="height:250px">
+					<a href="#"><img src="static/images/daniel_2.jpg" class="img-responsive" style="height:250px;object-fit:cover">
 						<h3>Daniel Yin</h3>
 					</a>
 				</div>
