--- a/templates/goalRender_paul.html
+++ b/templates/goalRender_paul.html
@@ -22,6 +22,11 @@
 			
 		</div>
 		</form>
+		<div class="border-top pt-3">
+			<small class="text-muted">
+				<a class="ml-2" href="{% url 'register' %}">Download Portfolio Details</a>
+			</small>
+		</div>
 	</div>
 	
 
