--- a/templates/portfolio_paul.html
+++ b/templates/portfolio_paul.html
@@ -16,7 +16,11 @@
 			
 		</div>
 		</form>
-
+		<div class="border-top pt-3">
+			<small class="text-muted">
+				More Complex Portfolio? <a class="ml-2" href="#">Upload CSV here</a>
+			</small>
+		</div>
 	</div>
 
 {% endblock content %}
