--- a/templates/recommendRender_paul.html
+++ b/templates/recommendRender_paul.html
@@ -28,5 +28,10 @@
 	<div class="form-group">
 			<button class="btn btn-primary" type="submit"> Save Result</button>	
 	</div>
+	<div class="border-top pt-3">
+		<small class="text-muted">
+			<a class="ml-2" href="{% url 'register' %}">Download Portfolio Details</a>
+		</small>
+	</div>
 
 {% endblock content %}
