--- a/templates/backtest_paul.html
+++ b/templates/backtest_paul.html
@@ -16,7 +16,7 @@
 		</form>
 	</div>
 	<div style="padding:0px;">
-    	<p><strong>Monthly Portfolio Chacteristics</strong> Return: {{return}} CVar: {{cvar}} Sharpe: {{sharpe}}</p>
+    	<p><strong>Next Month's Forecasted Portfolio Chacteristics</strong> Return: {{return}} CVar: {{cvar}} Sharpe: {{sharpe}}</p>
    	</div>
 	<div> 
 		{{graph|safe}}
