--- a/templates/betterRender_paul.html
+++ b/templates/betterRender_paul.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 	<div style="padding:0px;">
-    	<p><strong>Input Portfolio Monthly Chacteristics</strong> Return: {{inreturn}} CVar: {{incvar}} Sharpe: {{insharpe}}</p>
-    	<p><strong>Output Portfolio Monthly Chacteristics</strong> Return: {{outreturn}} CVar: {{outcvar}} Sharpe: {{outsharpe}}</p>
+    	<p><strong>Forecast of Input Portfolio Monthly Chacteristics</strong> Return: {{inreturn}} CVar: {{incvar}} Sharpe: {{insharpe}}</p>
+    	<p><strong>Forecast of Output Portfolio Monthly Chacteristics</strong> Return: {{outreturn}} CVar: {{outcvar}} Sharpe: {{outsharpe}}</p>
    	</div>
 	<div style="padding:0px;">
 		{{graph|safe}}
@@ -23,6 +23,11 @@
 			
 		</div>
 		</form>
+		<div class="border-top pt-3">
+			<small class="text-muted">
+				<a class="ml-2" href="{% url 'register' %}">Download Portfolio Details</a>
+			</small>
+		</div>
 	</div>
 	
 
